#722 Remove OOREMOTE protocol support