@@ -20,17 +20,14 @@ package org.firebirdsql.common.matchers;
 
 import org.firebirdsql.gds.impl.jni.EmbeddedGDSFactoryPlugin;
 import org.firebirdsql.gds.impl.jni.NativeGDSFactoryPlugin;
-import org.firebirdsql.gds.impl.oo.OOGDSFactoryPlugin;
 import org.firebirdsql.gds.impl.wire.WireGDSFactoryPlugin;
 import org.hamcrest.Matcher;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.in;
+import static org.hamcrest.Matchers.is;
 
 /**
  * Matchers for checking GDS types (eg for type specific assumptions).
@@ -39,11 +36,8 @@ import static org.hamcrest.Matchers.in;
  */
 public class GdsTypeMatchers {
 
-    @SuppressWarnings("deprecation")
-    private static final List<String> PURE_JAVA_TYPES = Collections.unmodifiableList(
-            Arrays.asList(WireGDSFactoryPlugin.PURE_JAVA_TYPE_NAME, OOGDSFactoryPlugin.TYPE_NAME));
-    private static final List<String> OTHER_NATIVE_TYPES =
-            Collections.singletonList(NativeGDSFactoryPlugin.NATIVE_TYPE_NAME);
+    private static final List<String> PURE_JAVA_TYPES = List.of(WireGDSFactoryPlugin.PURE_JAVA_TYPE_NAME);
+    private static final List<String> OTHER_NATIVE_TYPES = List.of(NativeGDSFactoryPlugin.NATIVE_TYPE_NAME);
 
     /**
      * @return Matcher for pure java types
